--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -1,18 +1,11 @@
 :root {
-  --black: #222;
-  --dark-slate-blue: #2e3193;
-  --ghost-white: #f4f4ff;
-  --orange-red: #ff602e;
-  --color: rgba(255, 255, 255, 0);
-}
-
-.w-layout-grid {
-  grid-row-gap: 16px;
-  grid-column-gap: 16px;
-  grid-template-rows: auto auto;
-  grid-template-columns: 1fr 1fr;
-  grid-auto-columns: 1fr;
-  display: grid;
+  --black: #040720;
+  --primary: #0018f9;
+  --grey-white: #f2f3f4;
+  --accent: #f99723;
+  --white: white;
+  --color\<deleted\|variable-3bf8f82b-1365-6ae4-d658-ba2c9a00f619\>: rgba(255, 255, 255, 0);
+  --secondary: #3ca100;
 }
 
 .w-layout-layout {
@@ -28,6 +21,15 @@
   justify-content: flex-start;
   align-items: flex-start;
   display: flex;
+}
+
+.w-layout-grid {
+  grid-row-gap: 16px;
+  grid-column-gap: 16px;
+  grid-template-rows: auto auto;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-columns: 1fr;
+  display: grid;
 }
 
 body {
@@ -105,7 +107,7 @@ p {
 }
 
 a {
-  color: var(--dark-slate-blue);
+  color: var(--primary);
   text-decoration: underline;
 }
 
@@ -129,11 +131,11 @@ a {
 }
 
 .brand {
-  color: var(--dark-slate-blue);
+  color: var(--primary);
 }
 
 .logo-heading {
-  color: var(--dark-slate-blue);
+  color: var(--black);
   letter-spacing: .5px;
   text-transform: uppercase;
   font-family: Signika, sans-serif;
@@ -143,18 +145,18 @@ a {
 }
 
 .nav-menu {
-  color: var(--dark-slate-blue);
+  color: var(--primary);
 }
 
 .nav-link, .nav-link.w--current {
-  color: var(--dark-slate-blue);
+  color: var(--black);
   font-size: 18px;
   font-weight: 700;
 }
 
 .header {
   height: auto;
-  background-image: url('../images/3d-hero-elements.png'), linear-gradient(to top, var(--ghost-white), white);
+  background-image: url('../images/3d-hero-elements.png'), linear-gradient(to top, var(--grey-white), white);
   background-position: 100%, 0 0;
   background-repeat: no-repeat, repeat;
   background-size: contain, auto;
@@ -194,7 +196,7 @@ a {
 
 .hero-heading-one {
   width: 100%;
-  color: var(--dark-slate-blue);
+  color: var(--primary);
   text-align: left;
   letter-spacing: 1px;
   text-transform: none;
@@ -207,7 +209,7 @@ a {
 }
 
 .button {
-  background-color: var(--orange-red);
+  background-color: var(--accent);
   text-align: left;
   border-radius: 50px;
   margin-top: 20px;
@@ -215,7 +217,7 @@ a {
 }
 
 .hero-heading-two {
-  color: var(--dark-slate-blue);
+  color: var(--primary);
   text-align: left;
   letter-spacing: 14px;
   text-transform: uppercase;
@@ -225,25 +227,24 @@ a {
 }
 
 .intro-section {
-  background-color: var(--color);
-  background-image: linear-gradient(rgba(46, 49, 148, .15), rgba(46, 49, 148, .03));
-  padding-top: 100px;
+  background-color: var(--grey-white);
+  color: var(--black);
+  padding-top: 60px;
   padding-bottom: 40px;
   position: relative;
   overflow: auto;
 }
 
 .intro-section.contact-section {
-  background-color: var(--dark-slate-blue);
+  background-color: var(--black);
   background-image: none;
   padding-top: 40px;
   padding-bottom: 100px;
   position: relative;
-  top: -2px;
 }
 
 .heading-four {
-  color: var(--dark-slate-blue);
+  color: var(--primary);
   letter-spacing: 0;
   font-family: Signika, sans-serif;
   font-size: 54px;
@@ -285,7 +286,7 @@ a {
 }
 
 .link-block-text {
-  color: var(--dark-slate-blue);
+  color: var(--primary);
   margin-bottom: 0;
   text-decoration: underline;
 }
@@ -307,7 +308,7 @@ a {
   grid-auto-flow: column;
   align-content: center;
   justify-content: start;
-  align-items: center;
+  align-items: start;
   justify-items: stretch;
   overflow: auto;
 }
@@ -320,44 +321,46 @@ a {
 }
 
 .image.svg-icon {
-  color: var(--orange-red);
+  color: var(--accent);
   overflow: auto;
 }
 
 .icon-card {
   width: 100%;
+  color: var(--white);
   text-align: left;
   background-color: rgba(0, 0, 0, 0);
   justify-content: flex-start;
-  align-items: center;
-  padding: 20px;
+  align-items: flex-start;
+  padding: 20px 0;
   display: flex;
   position: relative;
   overflow: auto;
 }
 
 .icon-title {
-  color: var(--dark-slate-blue);
+  color: var(--black);
   text-align: left;
   font-size: 24px;
   font-weight: 600;
-  line-height: 36px;
+  line-height: 32px;
   display: block;
   position: relative;
   top: 3px;
 }
 
 .icon-description {
-  color: var(--black);
   text-align: left;
   margin-top: 10px;
+  font-size: 16px;
+  line-height: 28px;
   display: block;
 }
 
 .icon-image {
   width: 300px;
   float: left;
-  background-color: var(--color);
+  background-color: var(--color\<deleted\|variable-3bf8f82b-1365-6ae4-d658-ba2c9a00f619\>);
   flex-direction: row;
   grid-template-rows: auto auto;
   grid-template-columns: 1fr 1fr;
@@ -608,14 +611,13 @@ a {
 }
 
 .intro-paragraph {
-  color: var(--black);
   margin-top: 20px;
-  font-size: 22px;
-  line-height: 40px;
+  font-size: 24px;
+  line-height: 44px;
 }
 
 .intro-div {
-  width: 85%;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -655,7 +657,7 @@ a {
 }
 
 .heading-four-contact {
-  color: #fff;
+  color: var(--white);
   letter-spacing: 0;
   text-transform: none;
   font-family: Signika, sans-serif;
@@ -665,7 +667,7 @@ a {
 }
 
 .paragraph-contact {
-  color: #fff;
+  color: var(--white);
   margin-top: 20px;
   font-size: 24px;
   line-height: 34px;
@@ -692,7 +694,7 @@ a {
 }
 
 .footer {
-  background-color: var(--ghost-white);
+  background-color: var(--white);
   padding-top: 20px;
   padding-bottom: 20px;
 }
@@ -710,7 +712,7 @@ a {
 }
 
 .copyright {
-  color: var(--dark-slate-blue);
+  color: var(--black);
 }
 
 .portfolio-section {
@@ -801,6 +803,7 @@ a {
 }
 
 .div-block-6 {
+  z-index: 100;
   width: 6%;
   display: inline-block;
   position: absolute;
@@ -909,7 +912,7 @@ a {
 
 .project-button {
   width: 100%;
-  background-color: var(--dark-slate-blue);
+  background-color: var(--primary);
   text-align: center;
   border-radius: 50px;
   margin-top: 20px;
@@ -932,12 +935,15 @@ a {
 }
 
 .subtitle {
-  color: var(--black);
   margin-top: 40px;
-  font-family: Signika, sans-serif;
-  font-size: 30px;
+  font-family: Figtree, sans-serif;
+  font-size: 32px;
   font-weight: 600;
-  line-height: 34px;
+  line-height: 44px;
+}
+
+.subtitle.hero-area {
+  color: var(--black);
 }
 
 .subtitle.hide-hero-text {
@@ -947,7 +953,7 @@ a {
 .back-to-top-circle {
   width: 60px;
   height: 60px;
-  background-color: var(--orange-red);
+  background-color: var(--primary);
   border-radius: 50px;
   padding: 10px;
 }
@@ -1007,7 +1013,7 @@ a {
 
 .hero-heading-one-linetwo {
   width: 100%;
-  color: var(--dark-slate-blue);
+  color: var(--primary);
   text-align: left;
   letter-spacing: 1px;
   text-transform: none;
@@ -1017,6 +1023,104 @@ a {
   font-size: 120px;
   font-weight: 600;
   line-height: 130px;
+}
+
+.featured-block {
+  width: 100%;
+  height: 550px;
+  color: var(--grey-white);
+  background-image: linear-gradient(rgba(0, 0, 0, 0), #000), url('../images/DCH-Style-Guide-Thumb.jpg');
+  background-position: 0 0, 50%;
+  background-size: auto, cover;
+  justify-content: flex-start;
+  align-items: flex-end;
+  padding: 40px;
+  display: flex;
+  position: static;
+}
+
+.featured-block.fb2 {
+  background-image: linear-gradient(rgba(0, 0, 0, 0), #000), url('../images/mood-boards-dallasgov-thumbs.jpg');
+}
+
+.featured-block.fb3 {
+  background-image: linear-gradient(rgba(0, 0, 0, 0), #000), url('../images/boards-and-commissions-cover.jpg');
+}
+
+.featured-content {
+  width: 100%;
+  color: var(--grey-white);
+  position: relative;
+}
+
+.featured-title {
+  width: 95%;
+  color: var(--grey-white);
+  display: inline-block;
+}
+
+.heading, .paragraph-4 {
+  color: var(--grey-white);
+  margin-bottom: auto;
+}
+
+.featured-arrow {
+  z-index: 100;
+  width: 6%;
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.quick-stack {
+  background-color: var(--white);
+}
+
+.hero-text {
+  color: var(--primary);
+  text-align: left;
+  text-transform: uppercase;
+  font-size: 110px;
+  font-weight: 600;
+  line-height: 110px;
+}
+
+.about-label {
+  color: var(--primary);
+  text-align: left;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  margin-bottom: 0;
+  font-weight: 700;
+  line-height: 20px;
+}
+
+.quick-stack-2 {
+  grid-column-gap: 30px;
+  grid-row-gap: 10px;
+  text-align: left;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.cell {
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+}
+
+.cell-2 {
+  align-items: flex-end;
+}
+
+.hero-text-placeholder {
+  color: rgba(4, 7, 32, 0);
+}
+
+.cell-3 {
+  text-align: center;
+  align-items: flex-start;
 }
 
 @media screen and (max-width: 991px) {
@@ -1029,7 +1133,7 @@ a {
   }
 
   .nav-menu {
-    background-color: var(--dark-slate-blue);
+    background-color: var(--primary);
     padding-top: 60px;
     padding-bottom: 60px;
   }
@@ -1046,13 +1150,13 @@ a {
   }
 
   .menu-button {
-    color: var(--dark-slate-blue);
+    color: var(--primary);
     padding: 5px;
     font-size: 32px;
   }
 
   .menu-button.w--open {
-    background-color: var(--dark-slate-blue);
+    background-color: var(--primary);
   }
 
   .hero {
@@ -1104,6 +1208,11 @@ a {
 
   .grid {
     grid-row-gap: 20px;
+  }
+
+  .icon-card {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   .icon-title {
@@ -1158,12 +1267,16 @@ a {
   }
 
   .intro-paragraph {
-    font-size: 16px;
-    line-height: 28px;
+    font-size: 20px;
+    line-height: 36px;
     overflow: auto;
   }
 
-  .intro-div, .div-block-3 {
+  .intro-div {
+    width: 95%;
+  }
+
+  .div-block-3 {
     width: 90%;
   }
 
@@ -1195,7 +1308,8 @@ a {
 
   .subtitle {
     margin-top: 20px;
-    font-size: 20px;
+    font-size: 30px;
+    line-height: 40px;
   }
 
   .subtitle.hero-area {
@@ -1243,6 +1357,42 @@ a {
     margin-right: 20px;
     font-size: 60px;
     line-height: 70px;
+  }
+
+  .featured-block {
+    height: 200px;
+    padding: 10px;
+  }
+
+  .featured-title {
+    width: 90%;
+  }
+
+  .heading {
+    font-size: 24px;
+    line-height: 40px;
+  }
+
+  .paragraph-4 {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .featured-arrow {
+    width: 8%;
+  }
+
+  .hero-text {
+    margin-bottom: 0;
+    font-size: 65px;
+    line-height: 80px;
+  }
+
+  .quick-stack-2 {
+    grid-column-gap: 40px;
+    grid-row-gap: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 
@@ -1300,7 +1450,7 @@ a {
   }
 
   .icon-card {
-    padding: 20px 0;
+    padding: 20px 0 0;
   }
 
   .icon-title {
@@ -1347,10 +1497,10 @@ a {
 
   .intro-paragraph {
     font-size: 16px;
-    line-height: 26px;
+    line-height: 32px;
   }
 
-  .div-block-3 {
+  .intro-div, .div-block-3 {
     width: 100%;
   }
 
@@ -1378,6 +1528,11 @@ a {
 
   .div-block-6 {
     width: 8%;
+  }
+
+  .subtitle {
+    font-size: 24px;
+    line-height: 34px;
   }
 
   .subtitle.hero-area {
@@ -1426,6 +1581,38 @@ a {
     margin-right: 10px;
     font-size: 54px;
     line-height: 64px;
+  }
+
+  .featured-block {
+    height: 150px;
+  }
+
+  .featured-title {
+    width: 90%;
+  }
+
+  .heading {
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  .paragraph-4 {
+    font-size: 14px;
+    line-height: 16px;
+  }
+
+  .featured-arrow {
+    width: 8%;
+  }
+
+  .hero-text {
+    font-size: 48px;
+    line-height: 54px;
+  }
+
+  .quick-stack-2 {
+    grid-column-gap: 30px;
+    grid-row-gap: 10px;
   }
 }
 
@@ -1478,8 +1665,7 @@ a {
 
   .intro-section {
     margin-top: 0;
-    padding-top: 20px;
-    padding-bottom: 80px;
+    padding: 20px 10px;
     overflow: auto;
   }
 
@@ -1724,9 +1910,46 @@ a {
     font-size: 34px;
     line-height: 34px;
   }
+
+  .featured-block {
+    height: 240px;
+  }
+
+  .heading {
+    font-size: 34px;
+    line-height: 40px;
+  }
+
+  .paragraph-4 {
+    margin-top: 10px;
+    font-size: 20px;
+    line-height: 22px;
+  }
+
+  .hero-text {
+    margin-bottom: 0;
+    font-size: 22px;
+    line-height: 22px;
+  }
+
+  .quick-stack-2 {
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .cell-3 {
+    align-items: flex-start;
+  }
 }
 
-#w-node-_7331fe8b-6002-ea69-4a57-dd1d744880e1-0a720657, #w-node-d1906c74-a7e0-552d-1b95-75c2e573ba0b-0a720657, #w-node-_6ebfa1ea-b3e4-df76-0df8-2c2ca6080ae8-0a720657, #w-node-_7331fe8b-6002-ea69-4a57-dd1d744880e1-6a310fa0, #w-node-d1906c74-a7e0-552d-1b95-75c2e573ba0b-6a310fa0, #w-node-_6ebfa1ea-b3e4-df76-0df8-2c2ca6080ae8-6a310fa0, #w-node-_7331fe8b-6002-ea69-4a57-dd1d744880e1-bcf7f9d8, #w-node-d1906c74-a7e0-552d-1b95-75c2e573ba0b-bcf7f9d8, #w-node-_6ebfa1ea-b3e4-df76-0df8-2c2ca6080ae8-bcf7f9d8 {
+#w-node-b9156bb7-f7ea-b630-6ad6-a6985f1d3c93-0a720657 {
+  grid-template-rows: auto auto auto;
+  grid-template-columns: 1fr 1fr;
+}
+
+#w-node-_7331fe8b-6002-ea69-4a57-dd1d744880e1-0a720657, #w-node-d1906c74-a7e0-552d-1b95-75c2e573ba0b-0a720657, #w-node-_6ebfa1ea-b3e4-df76-0df8-2c2ca6080ae8-0a720657 {
   grid-area: span 1 / span 1 / span 1 / span 1;
   align-self: auto;
   justify-self: auto;
@@ -1740,6 +1963,14 @@ a {
 #w-node-cfa1d536-a4cc-e5a8-e64f-7905b71a799b-a058ecf9, #w-node-cfa1d536-a4cc-e5a8-e64f-7905b71a799b-f1295a01 {
   grid-template-rows: auto;
   grid-template-columns: 1fr 1fr;
+}
+
+@media screen and (max-width: 479px) {
+  #w-node-b9156bb7-f7ea-b630-6ad6-a6985f1d3c93-0a720657 {
+    grid-template-rows: auto auto auto;
+    grid-template-columns: 1fr 1fr;
+    display: grid;
+  }
 }
 
 
