--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -138,10 +138,10 @@ a {
   color: var(--black);
   letter-spacing: .5px;
   text-transform: uppercase;
-  font-family: Signika, sans-serif;
-  font-size: 26px;
+  font-family: League Gothic, sans-serif;
+  font-size: 40px;
   font-weight: 700;
-  line-height: 28px;
+  line-height: 44px;
 }
 
 .nav-menu {
@@ -341,9 +341,11 @@ a {
 .icon-title {
   color: var(--black);
   text-align: left;
-  font-size: 24px;
-  font-weight: 600;
-  line-height: 32px;
+  text-transform: uppercase;
+  font-family: League Gothic, sans-serif;
+  font-size: 34px;
+  font-weight: 400;
+  line-height: 38px;
   display: block;
   position: relative;
   top: 3px;
@@ -1080,8 +1082,10 @@ a {
 .hero-text {
   color: var(--primary);
   text-align: left;
+  letter-spacing: 3px;
   text-transform: uppercase;
-  font-size: 110px;
+  font-family: League Gothic, sans-serif;
+  font-size: 130px;
   font-weight: 600;
   line-height: 110px;
 }
@@ -1092,8 +1096,10 @@ a {
   letter-spacing: 1px;
   text-transform: uppercase;
   margin-bottom: 0;
+  font-family: League Gothic, sans-serif;
+  font-size: 20px;
   font-weight: 700;
-  line-height: 20px;
+  line-height: 22px;
 }
 
 .quick-stack-2 {
@@ -1384,7 +1390,7 @@ a {
 
   .hero-text {
     margin-bottom: 0;
-    font-size: 65px;
+    font-size: 90px;
     line-height: 80px;
   }
 
@@ -1606,13 +1612,15 @@ a {
   }
 
   .hero-text {
-    font-size: 48px;
+    font-size: 70px;
     line-height: 54px;
   }
 
   .quick-stack-2 {
     grid-column-gap: 30px;
     grid-row-gap: 10px;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
@@ -1928,8 +1936,8 @@ a {
 
   .hero-text {
     margin-bottom: 0;
-    font-size: 22px;
-    line-height: 22px;
+    font-size: 40px;
+    line-height: 30px;
   }
 
   .quick-stack-2 {
