--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -1126,7 +1126,7 @@ a {
 
 .cell-3 {
   text-align: center;
-  align-items: flex-start;
+  align-items: center;
 }
 
 @media screen and (max-width: 991px) {
@@ -1953,8 +1953,8 @@ a {
 }
 
 #w-node-b9156bb7-f7ea-b630-6ad6-a6985f1d3c93-0a720657 {
-  grid-template-rows: auto auto auto;
-  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 #w-node-_7331fe8b-6002-ea69-4a57-dd1d744880e1-0a720657, #w-node-d1906c74-a7e0-552d-1b95-75c2e573ba0b-0a720657, #w-node-_6ebfa1ea-b3e4-df76-0df8-2c2ca6080ae8-0a720657 {
@@ -1971,6 +1971,13 @@ a {
 #w-node-cfa1d536-a4cc-e5a8-e64f-7905b71a799b-a058ecf9, #w-node-cfa1d536-a4cc-e5a8-e64f-7905b71a799b-f1295a01 {
   grid-template-rows: auto;
   grid-template-columns: 1fr 1fr;
+}
+
+@media screen and (max-width: 991px) {
+  #w-node-b9156bb7-f7ea-b630-6ad6-a6985f1d3c93-0a720657 {
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 @media screen and (max-width: 479px) {
