--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -355,7 +355,7 @@ a {
   text-align: left;
   margin-top: 10px;
   font-size: 16px;
-  line-height: 28px;
+  line-height: 22px;
   display: block;
 }
 
@@ -1154,13 +1154,13 @@ a {
   background-image: url('../images/ComputerLoopCrop.gif');
   background-position: 100% 0;
   background-repeat: no-repeat;
-  background-size: auto 50%;
+  background-size: auto 60%;
   background-attachment: scroll;
   position: absolute;
-  top: 10px;
+  top: 3%;
   bottom: 0%;
   left: 0%;
-  right: 10px;
+  right: 3%;
 }
 
 @media screen and (max-width: 991px) {
@@ -1448,7 +1448,7 @@ a {
   }
 
   .animate-bg {
-    background-size: auto 20%;
+    background-size: auto 30%;
   }
 }
 
@@ -1701,7 +1701,7 @@ a {
   }
 
   .animate-bg {
-    background-size: auto 10%;
+    background-size: auto 20%;
   }
 }
 
@@ -2048,6 +2048,10 @@ a {
     margin-bottom: 30px;
     font-size: 28px;
     line-height: 30px;
+  }
+
+  .animate-bg {
+    background-size: auto 10%;
   }
 }
 
