--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -261,7 +261,7 @@ a {
 }
 
 .about-div {
-  width: auto;
+  width: 80%;
 }
 
 .wave-divider {
@@ -1093,7 +1093,7 @@ a {
   text-transform: uppercase;
   text-shadow: 4px 5px 1px rgba(0, 24, 249, .2);
   font-family: Lato, sans-serif;
-  font-size: 60px;
+  font-size: 56px;
   font-weight: 900;
   line-height: 70px;
 }
@@ -1154,13 +1154,17 @@ a {
   background-image: url('../images/ComputerLoopCrop.gif');
   background-position: 100% 0;
   background-repeat: no-repeat;
-  background-size: auto 60%;
+  background-size: auto 50%;
   background-attachment: scroll;
   position: absolute;
   top: 3%;
   bottom: 0%;
   left: 0%;
   right: 3%;
+}
+
+.hero-title-block {
+  width: 80%;
 }
 
 @media screen and (max-width: 991px) {
@@ -1242,6 +1246,10 @@ a {
   .paragraph {
     margin-top: 10px;
     font-size: 20px;
+  }
+
+  .about-div {
+    width: 100%;
   }
 
   .icon-div {
@@ -1426,9 +1434,9 @@ a {
 
   .hero-text {
     margin-bottom: 10px;
-    font-size: 80px;
+    font-size: 50px;
     font-weight: 900;
-    line-height: 90px;
+    line-height: 60px;
   }
 
   .hero-text.contact-title {
@@ -1445,10 +1453,15 @@ a {
 
   .hero-text-v2 {
     margin-bottom: 40px;
+    font-size: 50px;
   }
 
   .animate-bg {
     background-size: auto 30%;
+  }
+
+  .hero-title-block {
+    width: 70%;
   }
 }
 
@@ -1563,7 +1576,7 @@ a {
 
   .intro-paragraph {
     font-size: 16px;
-    line-height: 32px;
+    line-height: 28px;
   }
 
   .intro-div, .div-block-3 {
@@ -1684,8 +1697,8 @@ a {
   }
 
   .hero-text {
-    font-size: 60px;
-    line-height: 70px;
+    font-size: 40px;
+    line-height: 50px;
   }
 
   .hero-text.contact-title {
@@ -1698,6 +1711,11 @@ a {
     grid-row-gap: 10px;
     padding-left: 0;
     padding-right: 0;
+  }
+
+  .hero-text-v2 {
+    font-size: 35px;
+    line-height: 40px;
   }
 
   .animate-bg {
@@ -2024,8 +2042,8 @@ a {
   .hero-text {
     -webkit-text-stroke-width: 2px;
     margin-bottom: 10px;
-    font-size: 30px;
-    line-height: 40px;
+    font-size: 28px;
+    line-height: 36px;
   }
 
   .hero-text.contact-title {
@@ -2046,12 +2064,16 @@ a {
 
   .hero-text-v2 {
     margin-bottom: 30px;
-    font-size: 28px;
+    font-size: 24px;
     line-height: 30px;
   }
 
   .animate-bg {
     background-size: auto 10%;
+  }
+
+  .hero-title-block {
+    width: 90%;
   }
 }
 
