--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -1072,18 +1072,17 @@ a {
 }
 
 .hero-text {
-  color: #fff0;
+  color: var(--primary);
   text-align: left;
   letter-spacing: 1px;
-  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-width: 0px;
   -webkit-text-stroke-color: var(--primary);
   text-transform: uppercase;
-  text-shadow: 4px 5px 1px #0018f933;
   margin-bottom: auto;
   font-family: Lato, sans-serif;
-  font-size: 36px;
+  font-size: 24px;
   font-weight: 900;
-  line-height: 70px;
+  line-height: 34px;
 }
 
 .about-label {
@@ -1151,6 +1150,21 @@ a {
 .hero-title-block {
   width: 85%;
   margin: 60px auto;
+}
+
+.hero-text-copy {
+  color: #fff0;
+  text-align: left;
+  letter-spacing: 1px;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: var(--primary);
+  text-transform: uppercase;
+  text-shadow: 4px 5px 1px #0018f933;
+  margin-bottom: auto;
+  font-family: Lato, sans-serif;
+  font-size: 36px;
+  font-weight: 900;
+  line-height: 70px;
 }
 
 @media screen and (max-width: 991px) {
@@ -1415,10 +1429,10 @@ a {
   }
 
   .hero-text {
-    margin-bottom: 10px;
-    font-size: 36px;
+    margin-bottom: auto;
+    font-size: 24px;
     font-weight: 900;
-    line-height: 60px;
+    line-height: 30px;
   }
 
   .hero-text.contact-title {
@@ -1444,6 +1458,18 @@ a {
 
   .hero-title-block {
     width: 90%;
+  }
+
+  .hero-text-copy {
+    margin-bottom: 10px;
+    font-size: 36px;
+    font-weight: 900;
+    line-height: 60px;
+  }
+
+  .hero-text-copy.contact-title {
+    font-size: 60px;
+    line-height: 70px;
   }
 }
 
@@ -1679,10 +1705,10 @@ a {
   }
 
   .hero-text {
-    -webkit-text-stroke-width: 1.5px;
-    text-shadow: 3px 3px 1px #0018f933;
-    font-size: 28px;
-    line-height: 50px;
+    -webkit-text-stroke-width: 0px;
+    margin-bottom: 10px;
+    font-size: 24px;
+    line-height: 30px;
   }
 
   .hero-text.contact-title {
@@ -1698,12 +1724,24 @@ a {
   }
 
   .hero-text-v2 {
-    font-size: 35px;
+    font-size: 40px;
     line-height: 40px;
   }
 
   .animate-bg {
     background-size: auto 20%;
+  }
+
+  .hero-text-copy {
+    -webkit-text-stroke-width: 1.5px;
+    text-shadow: 3px 3px 1px #0018f933;
+    font-size: 28px;
+    line-height: 50px;
+  }
+
+  .hero-text-copy.contact-title {
+    font-size: 50px;
+    line-height: 60px;
   }
 }
 
@@ -2028,11 +2066,11 @@ a {
   }
 
   .hero-text {
-    -webkit-text-stroke-width: 1.5px;
-    text-shadow: 3px 3px 1px #0018f933;
-    margin-bottom: 10px;
-    font-size: 28px;
-    line-height: 36px;
+    letter-spacing: 0;
+    -webkit-text-stroke-width: 0px;
+    margin-bottom: 5px;
+    font-size: 18px;
+    line-height: 26px;
   }
 
   .hero-text.contact-title {
@@ -2052,8 +2090,8 @@ a {
   }
 
   .hero-text-v2 {
-    margin-bottom: 30px;
-    font-size: 24px;
+    margin-bottom: 20px;
+    font-size: 28px;
     line-height: 30px;
   }
 
@@ -2063,6 +2101,19 @@ a {
 
   .hero-title-block {
     width: 90%;
+  }
+
+  .hero-text-copy {
+    -webkit-text-stroke-width: 1.5px;
+    text-shadow: 3px 3px 1px #0018f933;
+    margin-bottom: 10px;
+    font-size: 28px;
+    line-height: 36px;
+  }
+
+  .hero-text-copy.contact-title {
+    font-size: 34px;
+    line-height: 40px;
   }
 }
 
